@@ -479,6 +479,7 @@ struct proc_keyword_s proc_table[] = {
 #define LCN_END_TRY             "END TRY"
 #define LCN_ANTIALIAS           "ANTIALIAS"
 #define LCN_LOAD_MODULES        "LOAD MODULES"
+#define LCN_AUTOLOCAL           "AUTOLOCAL"
 
 /* system variables */
 #define LCN_SV_SBVER            "SBVER"
