@@ -124,6 +124,7 @@ bool System::execute(const char *bas) {
   opt_base = 0;
   opt_uipos = 0;
   opt_usepcre = 0;
+  opt_autolocal = 0;
 
   _state = kRunState;
   setWindowTitle(bas);
